--- a/Cse-Just-Web-App.csproj
+++ b/Cse-Just-Web-App.csproj
@@ -134,12 +134,17 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\Admin Template\css\about.css" />
     <Content Include="Content\Admin Template\css\login.css" />
     <Content Include="Content\Admin Template\css\sb-admin-2.css" />
     <Content Include="Content\Admin Template\css\sb-admin-2.min.css" />
+    <Content Include="Content\Admin Template\img\about.jpg" />
+    <Content Include="Content\Admin Template\img\department-pic.jpeg" />
     <Content Include="Content\Admin Template\img\just.png" />
+    <Content Include="Content\Admin Template\img\login%282%29.jpg" />
     <Content Include="Content\Admin Template\img\source-404.jpg" />
     <Content Include="Content\Admin Template\img\undraw_posting_photo.svg" />
+    <Content Include="Content\Admin Template\img\varsity-logo.png" />
     <Content Include="Content\Admin Template\img\welcome.gif" />
     <Content Include="Content\Admin Template\img\wwlcome2.gif" />
     <Content Include="Content\Admin Template\js\demo\chart-area-demo.js" />
