--- a/Views/Web.config
+++ b/Views/Web.config
@@ -7,7 +7,9 @@
       <section name="pages" type="System.Web.WebPages.Razor.Configuration.RazorPagesSection, System.Web.WebPages.Razor, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" requirePermission="false" />
     </sectionGroup>
   </configSections>
-
+  <connectionStrings>
+    <add name="csejustEntities" connectionString="metadata=res://*/csejustdb.csdl|res://*/csejustdb.ssdl|res://*/csejustdb.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-30MGIP6;initial catalog=csejust;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
   <system.web.webPages.razor>
     <host factoryType="System.Web.Mvc.MvcWebRazorHostFactory, System.Web.Mvc, Version=5.2.7.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
     <pages pageBaseType="System.Web.Mvc.WebViewPage">
