--- a/Cse-Just-Web-App.csproj
+++ b/Cse-Just-Web-App.csproj
@@ -130,6 +130,7 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\usersController.cs" />
     <Compile Include="Controllers\usertypesController.cs" />
+    <Compile Include="FileHelper\UploadFile.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -1823,16 +1824,7 @@
     <Content Include="Content\EmployeePhoto\3.png" />
     <Content Include="Content\EmployeePhoto\default.png" />
     <Content Include="Content\Site.css" />
-    <Content Include="Content\StudentPhoto\1.png" />
-    <Content Include="Content\StudentPhoto\10.png" />
-    <Content Include="Content\StudentPhoto\11.png" />
-    <Content Include="Content\StudentPhoto\12.png" />
-    <Content Include="Content\StudentPhoto\2.png" />
-    <Content Include="Content\StudentPhoto\3.png" />
-    <Content Include="Content\StudentPhoto\7.png" />
-    <Content Include="Content\StudentPhoto\8.png" />
-    <Content Include="Content\StudentPhoto\9.png" />
-    <Content Include="Content\StudentPhoto\default.png" />
+    <Content Include="Content\UserPhoto\default.png" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
